add color stuff to ml

--- a/maching_learning/album_covers/scrape_albums.ipynb
+++ b/maching_learning/album_covers/scrape_albums.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {
     "Collapsed": "false"
    },
@@ -21,14 +21,36 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import requests\n",
-    "from PIL import Image\n",
+    "from IPython.display import Image, display\n",
     "import ast\n",
-    "import os"
+    "import os\n",
+    "from glob import glob\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zach/anaconda3/lib/python3.7/site-packages/tqdm/std.py:658: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
+      "  from pandas import Panel\n"
+     ]
+    }
+   ],
+   "source": [
+    "tqdm.pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "Collapsed": "false"
    },
@@ -39,7 +61,7 @@
     "\n",
     "# In order to perform a write operation you need to authenticate yourself\n",
     "username = \"zacharyneveu\"\n",
-    "password_hash = pylast.md5(\"URABUS1!\")\n",
+    "password_hash = \"817ff0e30b8425e4bb511be5969a7115\"\n",
     "\n",
     "network = pylast.LastFMNetwork(api_key=API_KEY, api_secret=API_SECRET,\n",
     "                               username=username, password_hash=password_hash)"
@@ -47,18 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "datap = Path(\"/home/zach/Data/fma_medium/fma_metadata\")"
+    "datap = Path(\"/home/zach/Data/fma_medium/fma_meta\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "metadata": {
     "Collapsed": "false"
    },
@@ -69,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "Collapsed": "false"
    },
@@ -120,7 +142,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>AWOL - A Way Of Life</td>\n",
@@ -144,7 +166,7 @@
        "      <td>http://freemusicarchive.org/music/AWOL/AWOL_-_...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>3</td>\n",
        "      <td>1.0</td>\n",
        "      <td>AWOL - A Way Of Life</td>\n",
@@ -168,7 +190,7 @@
        "      <td>http://freemusicarchive.org/music/AWOL/AWOL_-_...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>5</td>\n",
        "      <td>1.0</td>\n",
        "      <td>AWOL - A Way Of Life</td>\n",
@@ -192,7 +214,7 @@
        "      <td>http://freemusicarchive.org/music/AWOL/AWOL_-_...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>10</td>\n",
        "      <td>6.0</td>\n",
        "      <td>Constant Hitmaker</td>\n",
@@ -216,7 +238,7 @@
        "      <td>http://freemusicarchive.org/music/Kurt_Vile/Co...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>20</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Niris</td>\n",
@@ -311,7 +333,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "metadata": {
     "Collapsed": "false"
    },
@@ -339,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "metadata": {
     "Collapsed": "false"
    },
@@ -350,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 34,
    "metadata": {
     "Collapsed": "false"
    },
@@ -359,91 +381,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Album not found\n",
-      "Album not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n",
-      "Cover not found\n"
+      "['covers/Electronic/Taitsu [Tights].png']\n"
      ]
     }
    ],
    "source": [
-    "for loc in range(100):\n",
-    "    genre = df.iloc[loc].genre['genre_title']\n",
-    "    album = network.get_album(df.iloc[loc].artist_name, df.iloc[loc].album_title)\n",
+    "print(glob(\"covers/Electronic/Taitsu*\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "def sanitize_fn(fn):\n",
+    "    \"\"\" Sanitizes file names (remove [] and / so they work with globs)\n",
+    "    \"\"\"\n",
+    "    for ch in ['[', ']']:\n",
+    "        if ch in fn:\n",
+    "            fn = fn.replace(ch, '')\n",
+    "    return fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "for loc,row in tqdm(df.iterrows(), total=df.shape[0]):\n",
     "    try:\n",
-    "        cover = album.get_cover_image()\n",
-    "        if cover is not None:\n",
-    "            img = requests.get(cover)\n",
-    "            #display(Image.open(img.raw))\n",
-    "            os.makedirs(\"covers/\"+genre, exist_ok=True)\n",
-    "            with open(\"covers/\"+genre+\"/\"+cover.split('/')[-1], 'wb') as fh:\n",
-    "                fh.write(img.content)\n",
-    "        else:\n",
-    "            print(\"Cover not found\")\n",
+    "        if row.genre is None:\n",
+    "            continue\n",
+    "        genre = row.genre['genre_title']\n",
+    "        artist, title = str(row.artist_name), str(row.album_title)\n",
+    "        os.makedirs(\"covers/\"+genre, exist_ok=True)\n",
+    "        fn = sanitize_fn(\"covers/\"+genre+\"/\"+title.replace('/', '_'))\n",
+    "        if len(glob(fn+\"*\")) > 0:\n",
+    "            # skip re-downloading covers\n",
+    "            continue\n",
+    "        album = network.get_album(artist, title)\n",
+    "        try:\n",
+    "            cover = album.get_cover_image()\n",
+    "            if cover is not None:\n",
+    "                img = requests.get(cover)\n",
+    "                fn += '.'+cover.split('.')[-1]\n",
+    "                with open(fn, 'wb') as fh:\n",
+    "                    fh.write(img.content)\n",
+    "                display(Image(filename=fn))\n",
+    "            else:\n",
+    "                Path(fn+\".txt\").touch()\n",
+    "                #print(f\"Cover not found for {title} by {artist}\")\n",
+    "        except Exception as E:\n",
+    "            if E is KeyboardInterrupt:\n",
+    "                break\n",
+    "            else:\n",
+    "                Path(fn+\".txt\").touch()\n",
+    "                #print(f\"{title} not found\")\n",
     "    except Exception as E:\n",
-    "        print(E)\n",
     "        if E is KeyboardInterrupt:\n",
     "            break\n",
     "        else:\n",
-    "            print(\"Album not found\")\n"
+    "            print(loc)\n",
+    "            print(E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "!rm -r *.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(glob(\"covers/Metal/Black Elk*\"))"
    ]
   },
   {
@@ -472,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
